cleaned up the z-index issue

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,7 +13,7 @@
 }
 
 #tsparticles {
-  z-index: -1;
+  z-index: 1;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -34,10 +34,12 @@
   flex-direction: column;
   align-items: center;
   padding: 5rem 0 0 0;
+  z-index: 2;
 }
 .center {
   display: flex;
   justify-content: center;
+  z-index: 2;
 }
 
 .search {
@@ -50,6 +52,7 @@
   transition: all 0.5s ease-in-out;
   font-weight: 600;
   margin: 5px;
+  z-index: 2;
 
   &:focus {
     transition: all 0.5s ease-in-out;
@@ -67,6 +70,7 @@
   transition: all 0.5s ease-in-out;
   font-weight: 600;
   margin: 5px;
+  z-index: 2;
   &:focus {
     outline: none;
   }
@@ -83,11 +87,13 @@
   width: 100%;
   max-width: 500px;
   margin-bottom: 3rem;
+  z-index: 2;
 }
 
 #inputImage {
   border-radius: 1rem;
   border: 1rem solid #110e0e;
+  z-index: 2;
 }
 
 .celebrity-name {
@@ -102,6 +108,7 @@
   height: auto;
   min-width: 98px;
   margin: 5px;
+  z-index: 2;
 }
 
 .header {
@@ -110,11 +117,13 @@
   padding-top: 3rem;
   text-align: center;
   color: rgb(223, 202, 78);
+  z-index: 2;
 }
 
 .black {
   color: #dfca4e;
   text-decoration: none;
+  z-index: 2;
 
   &:visited {
     color: #dfca4e;
@@ -125,6 +134,7 @@
   max-height: 500px;
   min-height: 200px;
   width: 100%;
+  z-index: -1;
 }
 .celeb {
   display: flex;
@@ -132,9 +142,11 @@
   padding: 1rem;
   max-width: 500px;
   width: 100vw;
+  z-index: 2;
 }
 
 #inputImage {
   width: 100vw;
   max-width: 500px;
+  z-index: 2;
 }
