--- a/client/src/Home.scss
+++ b/client/src/Home.scss
@@ -1,8 +1,7 @@
 #tsparticles {
-  z-index: -1;
+  z-index: 1;
   width: 100%;
   height: 100vh;
-
   background: linear-gradient(
     rgba(0, 0, 0, 1) 10%,
     rgba(234, 44, 11, 0.75) 150%
@@ -22,9 +21,19 @@
   }
 }
 
-button {
-  padding: 2rem;
+h1 {
+  z-index: 2;
+}
+
+.button {
+  z-index: 2;
+  height: 80px;
   border-radius: 50px;
+  padding: 2rem;
+}
+
+.button__bt {
+  z-index: 2;
   border: none;
   background-color: #dfca4e;
 }
